Updated Instagram Link

--- a/public/index.html
+++ b/public/index.html
@@ -121,7 +121,7 @@
                 </a>
             </li>
             <li title="Michael Freeland on Instagram" aria-label="Michael Freeland on Instagram">
-                <a href="https://instagram.com/m-freeland" rel="external" target="_blank">
+                <a href="https://www.instagram.com/i_am_mfreeland" rel="external" target="_blank">
                     <figure aria-hidden="true">
                         <picture aria-hidden="true">
                             <img src="./image/icon/instagram.svg" alt="Instagram" aria-hidden="true">
