--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
         <picture aria-hidden="true">
             <img src="./image/freeland.png" aria-hidden="true">
         </picture>
-        <iframe scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/soundcloud%253Aplaylists%253A2190027287&color=%23F984B9&auto_play=false&hide_related=false&show_comments=false&show_user=true&show_reposts=false&show_teaser=false&visual=true"></iframe>
+        <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/soundcloud%253Aplaylists%253A2194590296&color=%23f984b9&auto_play=false&hide_related=true&show_comments=false&show_user=false&show_reposts=false&show_teaser=false&visual=false"></iframe>
     </main>
     <nav role="navigation">
         <ul>
