--- a/src/index.html
+++ b/src/index.html
@@ -100,7 +100,7 @@
                     </figure>
                 </a>
             </li>
-            <li title="Michael Freeland on YouTube Music" aria-label="Michael Freeland on YouTube Music">
+            <li title="Michael Freeland on YouTube Music" data-view="full" aria-label="Michael Freeland on YouTube Music">
                 <a href="https://www.youtube.com/" rel="external" target="_blank">
                     <figure aria-hidden="true">
                         <picture aria-hidden="true">
@@ -130,7 +130,7 @@
                     </figure>
                 </a>
             </li>
-            <li title="Contact Michael Freeland" data-view="full" aria-label="Contact Michael Freeland">
+            <li title="Contact Michael Freeland" aria-label="Contact Michael Freeland">
                 <a href="mailto:contact@m-freeland.com">
                     <figure>
                         <picture>
@@ -144,7 +144,9 @@
     </nav>
     <footer>
         <ul>
-            <li>&#169; 2026 Michael Freeland &#174;</li>
+            <li>
+                <a href="mailto:contact@m-freeland.com"></a>&#169; 2026 Michael Freeland &#174;</a>
+            </li>
         </ul>
     </footer>
     <script type="text/javascript" src="./javascript/scripts.js"></script>
