--- a/src/index.html
+++ b/src/index.html
@@ -145,7 +145,7 @@
     <footer>
         <ul>
             <li>
-                <a href="mailto:contact@m-freeland.com"></a>&#169; 2026 Michael Freeland &#174;</a>
+                <a href="mailto:contact@m-freeland.com">&#169; 2026 Michael Freeland &#174;</a>
             </li>
         </ul>
     </footer>
