--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,7 @@
     <nav role="navigation">
         <ul>
             <li title="Michael Freeland on Apple Music" aria-label="Michael Freeland on Apple Music">
-                <a href="https://music.apple.com/us/artist/" rel="external" target="_blank">
+                <a href="https://music.apple.com/us/artist/michael-freeland/1878498731" rel="external" target="_blank">
                     <figure aria-hidden="true">
                         <picture aria-hidden="true">
                             <img src="./image/icon/apple.svg" alt="Apple Music" aria-hidden="true">
@@ -91,7 +91,7 @@
                 </a>
             </li>
             <li title="Michael Freeland on Spotify" aria-label="Michael Freeland on Spotify">
-                <a href="https://open.spotify.com/artist/" rel="external" target="_blank">
+                <a href="https://open.spotify.com/artist/4viEhjS5P0x3xcb8o7O3mn" rel="external" target="_blank">
                     <figure aria-hidden="true">
                         <picture aria-hidden="true">
                             <img src="./image/icon/spotify.svg" alt="Spotify" aria-hidden="true">
@@ -101,7 +101,7 @@
                 </a>
             </li>
             <li title="Michael Freeland on YouTube Music" data-view="full" aria-label="Michael Freeland on YouTube Music">
-                <a href="https://www.youtube.com/" rel="external" target="_blank">
+                <a href="https://youtu.be/Hq0s4oAuU-s" rel="external" target="_blank">
                     <figure aria-hidden="true">
                         <picture aria-hidden="true">
                             <img src="./image/icon/youtube.svg" alt="YouTube Music" aria-hidden="true">
@@ -111,7 +111,7 @@
                 </a>
             </li>
             <li title="Michael Freeland on Pandora Radio" aria-label="Michael Freeland on Pandora Radio">
-                <a href="https://www.pandora.com/artist/m-freeland" rel="external" target="_blank">
+                <a href="https://www.pandora.com/artist/michael-freeland/little-1/ALmnkgVm3r3PqpZ" rel="external" target="_blank">
                     <figure aria-hidden="true">
                         <picture aria-hidden="true">
                             <img src="./image/icon/pandora.svg" alt="Pandora" aria-hidden="true">
